refactor: Change Integer object instantiate